--- a/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
+++ b/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.by5388.learn.v4.kotlin.criminalintent">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:name=".CriminalIntentApplication"
@@ -19,6 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files" />
+        </provider>
     </application>
 
 </manifest>
