fix gradle dependencies conflict
原来LearnBook 没有启用 “android.enableJetifier=true”
导致添加 implementation "android.arch.work:work-runtime:1.0.1" 时 产生了严重的依赖冲突（可以启动，不过运行时崩溃，然后提示类冲突，重复），同时引入了androidX和android-support,添加该配置后完美修复该问题

--- a/LearnBook/gradle.properties
+++ b/LearnBook/gradle.properties
@@ -17,3 +17,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+#todo 20210718 添加了workManager之后，出现了依赖冲突
+#添加以下一行 解决了冲突 https://www.cnblogs.com/360minitao/p/14388671.html
+android.enableJetifier=true
