--- a/LearnBook/PhotoGallery/build.gradle
+++ b/LearnBook/PhotoGallery/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 apply plugin: 'kotlin-android'
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -33,6 +33,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -55,9 +56,8 @@ dependencies {
     testImplementation 'net.bytebuddy:byte-buddy:1.11.5'
     testImplementation 'org.mockito:mockito-core:3.11.2'
     testImplementation 'org.mockito:mockito-inline:3.11.2'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-}
-repositories {
-    mavenCentral()
+    //add for workManager
+    implementation "android.arch.work:work-runtime:1.0.1"
 }
