Learn chap BroadcastIntent PhotoGallery
自定义权限：4种，及其相关的使用范围；
有序广播：发送方式，拦截方式，使用场景；
广播接收者的优先级设置等。
28.3 goAsync

--- a/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
+++ b/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.by5388.learn.v4.kotlin.photogallery">
 
+    <permission
+        android:name="${applicationId}.PRIVATE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="${applicationId}.PRIVATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -21,6 +26,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".NotificationReceiver"
+            android:exported="false"
+            android:permission="${applicationId}.PRIVATE">
+            <!-- 最低的优先级，-999，而-1000是系统保留的值 -->
+            <intent-filter android:priority="-999">
+                <action android:name="${applicationId}.SHOW_NOTIFICATION" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
