--- a/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
+++ b/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
     <uses-permission android:name="${applicationId}.PRIVATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+<!--   android:usesCleartextTraffic="true" 允许加载http -->
     <application
         android:name=".PhotoGalleryApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -26,6 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PhotoPageActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+
         <receiver
             android:name=".NotificationReceiver"
             android:exported="false"
