learn 29.8 29.9 Chrome Custom Tab
add androidx.browser:browser:
use Chrome Custom Tab

--- a/LearnBook/PhotoGallery/build.gradle
+++ b/LearnBook/PhotoGallery/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //add for workManager
     implementation "android.arch.work:work-runtime:1.0.1"
+    //add for Chrome Custom Tab
+    implementation 'androidx.browser:browser:1.3.0'
 }
