--- a/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
+++ b/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnBook">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.LearnBook.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
