--- a/LearnBook/GeoQuiz/src/main/AndroidManifest.xml
+++ b/LearnBook/GeoQuiz/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnBook">
-        <activity android:name=".CheatActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".CheatActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
