CriminalIntent 使用 navigation-args来传递fragment之间的参数
1.build.gradle、module/build.gradle 增加相应的配置
2.在navigation配置中定义相关的参数
3.在启动的fragment中配置参数，在目标fragment(包括DialogFragment)中接收参数
--
在navigation中来配置并显示dialog(实际上是DialogFragment)

--- a/LearnBook/CriminalIntent/build.gradle
+++ b/LearnBook/CriminalIntent/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id "androidx.navigation.safeargs"
 }
 
 android {
@@ -66,8 +67,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //add for navigationFragment
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
 
     // https://mvnrepository.com/artifact/com.squareup.leakcanary/leakcanary-android
