CriminalIntent 适配Android11 pm resolveActivity
在清单文件中声明需要查询的Intent#action

--- a/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
+++ b/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
@@ -7,6 +7,13 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <queries>
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+
+        </intent>
+    </queries>
+
     <application
         android:name=".CriminalIntentApplication"
         android:allowBackup="true"
