CriminalIntent 适配Android11 pm resolveActivity
修复Android11+设备无法选择联系人的问题，需要在manifest.xml 增加query-intent节点，与代码中的action、data相一致才可以取得对应的数据

--- a/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
+++ b/LearnBook/CriminalIntent/src/main/AndroidManifest.xml
@@ -8,8 +8,18 @@
         android:required="false" />
 
     <queries>
+        <!-- 获取拍照的图片 -->
         <intent>
             <action android:name="android.media.action.IMAGE_CAPTURE" />
+
+        </intent>
+        <!-- 读取联系人 -->
+        <intent>
+            <action android:name="android.intent.action.PICK" />
+            <data
+                android:host="com.android.contacts"
+                android:mimeType="*/*"
+                android:scheme="content" />
 
         </intent>
     </queries>
