--- a/LearnBook/NerdLauncher/src/main/AndroidManifest.xml
+++ b/LearnBook/NerdLauncher/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.by5388.learn.v4.kotlin.nerdlauncher">
 
+    <!-- 适配Android 11 查询应用安装列表 -->
+    <!-- https://developer.android.google.cn/training/package-visibility?hl=zh-cn   -->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+        </intent>
+    </queries>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
