--- a/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
+++ b/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="${applicationId}.PRIVATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
 <!--   android:usesCleartextTraffic="true" 允许加载http -->
     <application
