--- a/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
+++ b/LearnBook/PhotoGallery/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:name=".PhotoGalleryApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LearnBook">
+        android:theme="@style/Theme.LearnBook"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".PhotoGalleryActivity"
+            android:name=".navigation.PhotoGalleryNavigationActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +29,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <activity-->
+<!--            android:enabled="false"-->
+<!--            android:name=".PhotoGalleryActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".PhotoPageActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
@@ -37,6 +47,7 @@
             android:name=".NotificationReceiver"
             android:exported="false"
             android:permission="${applicationId}.PRIVATE">
+
             <!-- 最低的优先级，-999，而-1000是系统保留的值 -->
             <intent-filter android:priority="-999">
                 <action android:name="${applicationId}.SHOW_NOTIFICATION" />
