PhotoGallery增加一个Fresco适配器
当前Fresco最新版3.0.0有bug,使用过程中提示找不到so导致崩溃
退回2.6.0的版本

--- a/LearnBook/PhotoGallery/build.gradle
+++ b/LearnBook/PhotoGallery/build.gradle
@@ -85,4 +85,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
 
 
+    // https://mvnrepository.com/artifact/com.facebook.fresco/fresco
+    //noinspection GradleDependency
+    //目前最新版的 3.0.0 有bug,不能使用
+    implementation 'com.facebook.fresco:fresco:2.6.0'
+
+
 }
