--- a/LearnBook/PhotoGallery/build.gradle
+++ b/LearnBook/PhotoGallery/build.gradle
@@ -45,50 +45,49 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //add for network
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     //add lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     //add for test
     androidTestImplementation 'androidx.test:rules:1.4.0'
-    testImplementation 'net.bytebuddy:byte-buddy:1.11.5'
-    testImplementation 'org.mockito:mockito-core:3.11.2'
-    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    testImplementation 'net.bytebuddy:byte-buddy:1.14.6'
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //add for workManager
     implementation "android.arch.work:work-runtime:1.0.1"
     //add for Chrome Custom Tab
     implementation 'androidx.browser:browser:1.4.0'
 
     //add for navigationFragment
-    implementation "androidx.navigation:navigation-fragment:$navigation_version"
-    implementation "androidx.navigation:navigation-ui:$navigation_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
 
     // https://mvnrepository.com/artifact/com.squareup.leakcanary/leakcanary-android
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:2.9.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:2.10'
 
 
     // https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     // https://mvnrepository.com/artifact/com.squareup.picasso/picasso
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
     // https://mvnrepository.com/artifact/com.facebook.fresco/fresco
     //noinspection GradleDependency
     //目前最新版的 3.0.0 有bug,不能使用
-    implementation 'com.facebook.fresco:fresco:2.6.0'
+    implementation 'com.facebook.fresco:fresco:3.0.0'
 
 
 }
