--- a/LearnBook/PhotoGallery/build.gradle
+++ b/LearnBook/PhotoGallery/build.gradle
@@ -50,10 +50,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //add for network
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.7.2'
     //add lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     //add for test
@@ -94,6 +94,27 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:2.6.0'
 
     implementation "androidx.preference:preference-ktx:1.2.0"
+
+
+    // https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxkotlin
+    runtimeOnly 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    // https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    // https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxandroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/adapter-rxjava2
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
+
+
+
+    //协程
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.2'
+
+
+    // ViewModel: 引用 viewModelScope
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+
 
 
 }
